[package]
name = "rolling_stats"
authors = ["Martin Durak mates.glm@gmail.com"]
version = "0.0.1"
license = "Apache-2.0"
description = "Some statistics fn"
edition = "2021"

[lib]
name = "lib"

[features]
default = ["std"]   # Default to using the std
std = []
no-std = []

[dependencies]
byteorder = "1.5.0"
