[package]
name = "rolling_stats"
authors = ["Martin Durak mates.glm@gmail.com"]
version = "0.0.1"
license = "Apache-2.0"
description = "Some statistics fn"
edition = "2021"

[lib]
name = "lib"

[features]
default = []   # Default no_std
std = []

[dependencies]
byteorder = "1.5.0"
rand_distr = "0.4.3"
rand = "0.8.5"
log = "0.4.21"

